Improved request creation logic; Improved library usage.

--- a/Discogs4Net.Test/Discogs4Net.Test.csproj
+++ b/Discogs4Net.Test/Discogs4Net.Test.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ArtistTest.cs" />
+    <Compile Include="OAuthTest.cs" />
     <Compile Include="ReleaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
